# form-constructor-backend

./: .gitignore  README.MD  pyproject.toml  requirements.txt  run.py
app/: main.py
app/dals/: answer_dal.py  base_dal.py  form_dal.py
app/depends/: dependencies.py
app/models/: form_model.py
app/router/: form_router.py
app/schemas/: answer_schema.py  form_schema.py
db/: forms_constructor.db
